<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context="com.github.piasy.yamvp.example.MainFragment"
        >

    <EditText
            android:id="@+id/mEtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            />
    <TextView
            android:id="@+id/mVerifyResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_phone_number"
            />
</LinearLayout>
